force-app/main/default/objects/MINTEL_Line_Contact__c/MINTEL_Line_Contact__c.object-meta.xml
<CustomObject>
    <label>Line Contact</label>
    <nameField>
        <label>Line Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>