force-app/main/default/objects/MINTEL_Line_Contact__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Line Contact</relationshipLabel>
    <relationshipName>Line_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>