force-app/main/default/objects/MINTEL_Line_Contact__c/fields/Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Channel_ID__c</fullName>
    <label>Channel_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>