force-app/main/default/objects/MINTEL_Line_Contact__c/fields/ConnectxOrgId__c.field-meta.xml
<CustomField>
    <fullName>ConnectxOrgId__c</fullName>
    <label>ConnectxOrgId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>