force-app/main/default/objects/MINTEL_Line_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Line Contact</relationshipLabel>
    <relationshipName>Line_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>