force-app/main/default/objects/MINTEL_Line_Contact__c/fields/display_name_available__c.field-meta.xml
<CustomField>
    <fullName>display_name_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Name Available</label>
    <type>Checkbox</type>
</CustomField>