force-app/main/default/objects/MINTEL_Line_Contact__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <formula>IMAGE(&quot;https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/LINE_logo.svg/768px-LINE_logo.svg.png&quot;, &quot;Line&quot;, 30, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icon</label>
    <type>Text</type>
</CustomField>