force-app/main/default/objects/MINTEL_Line_Contact__c/fields/LastAgent__c.field-meta.xml
<CustomField>
    <fullName>LastAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LastAgent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Line_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>