force-app/main/default/objects/MINTEL_Line_Contact__c/fields/LastMessage__c.field-meta.xml
<CustomField>
    <fullName>LastMessage__c</fullName>
    <label>LastMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>