force-app/main/default/objects/MINTEL_Line_Contact__c/fields/Line_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Line_Subscription__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Line Subscription</label>
    <type>Checkbox</type>
</CustomField>