force-app/main/default/objects/MINTEL_Line_Contact__c/fields/mid__c.field-meta.xml
<CustomField>
    <fullName>mid__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>mid</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>