force-app/main/default/objects/MINTEL_Line_Contact__c/fields/Need_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Need_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Follow Up</label>
    <type>Checkbox</type>
</CustomField>