force-app/main/default/objects/MINTEL_Line_Contact__c/fields/Ongoing_Case__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ongoing_Case</label>
    <type>Checkbox</type>
</CustomField>