force-app/main/default/objects/MINTEL_Line_Contact__c/fields/Ongoing_Chat__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Chat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ongoing_Chat</label>
    <type>Checkbox</type>
</CustomField>