force-app/main/default/objects/MINTEL_Line_Contact__c/fields/Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Process_Status__c</fullName>
    <label>Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow up Customer</fullName>
            </value>
            <value>
                <fullName>Follow up Internal</fullName>
            </value>
            <value>
                <fullName>No Need Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>