force-app/main/default/objects/MINTEL_Line_Contact__c/fields/readStatus__c.field-meta.xml
<CustomField>
    <fullName>readStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>readStatus</label>
    <type>Checkbox</type>
</CustomField>