force-app/main/default/objects/MINTEL_Line_Contact__c/fields/Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Status_Message__c</fullName>
    <label>Status Message</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>