force-app/main/default/objects/MINTEL_Line_Contact__c/fields/Sub_topic__c.field-meta.xml
<CustomField>
    <fullName>Sub_topic__c</fullName>
    <label>Sub-topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sub_topic</valueSetName>
    </valueSet>
</CustomField>