force-app/main/default/objects/MINTEL_Line_Contact__c/fields/Verify_Status__c.field-meta.xml
<CustomField>
    <fullName>Verify_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Status</label>
    <type>Checkbox</type>
</CustomField>